k8s/apps/passwords/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vaultwarden
  name: vaultwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: vaultwarden
  type: ClusterIP
