k8s/apps/passwords/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: "acme"
spec:
  ingressClassName: nginx
  rules:
  -
    host: vaultwarden.home.tremoureux.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
